--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,126 @@
     	<artifactId>jasperreports</artifactId>
     	<version>6.1.0</version>
     </dependency>
+    
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-api</artifactId>
+    	<version>1.7.6</version>
+    </dependency>
+    <dependency>
+    	<groupId>ch.qos.logback</groupId>
+    	<artifactId>logback-classic</artifactId>
+    	<version>1.1.1</version>
+    </dependency>
+    
+    <dependency>
+		<groupId>org.thymeleaf</groupId>
+		<artifactId>thymeleaf-spring4</artifactId>
+		<version>2.1.2.RELEASE</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>org.apache.commons</groupId>
+    	<artifactId>commons-lang3</artifactId>
+    	<version>3.3.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.commons</groupId>
+    	<artifactId>commons-collections4</artifactId>
+    	<version>4.0</version>
+    </dependency>
+    
+    <dependency>
+    	<groupId>org.hibernate</groupId>
+    	<artifactId>hibernate-entitymanager</artifactId>
+    	<version>4.3.6.Final</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.hibernate</groupId>
+    	<artifactId>hibernate-validator</artifactId>
+    	<version>5.1.2.Final</version>
+    </dependency>
+    
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>javax.servlet-api</artifactId>
+    	<version>3.1.0</version>
+    	<scope>provided</scope>
+    </dependency>
+    
+    <dependency>
+    	<groupId>org.hsqldb</groupId>
+    	<artifactId>hsqldb</artifactId>
+    	<version>2.3.2</version>
+    </dependency>
+    <dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+		<version>9.3-1103-jdbc41</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-dbcp2</artifactId>
+		<version>2.0.1</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>javax.validation</groupId>
+    	<artifactId>validation-api</artifactId>
+    	<version>1.1.0.Final</version>
+	</dependency>
+	<dependency>
+    	<groupId>javax.el</groupId>
+    	<artifactId>javax.el-api</artifactId>
+    	<version>3.0.0</version>
+	</dependency>
+	<dependency>
+    	<groupId>org.glassfish</groupId>
+    	<artifactId>javax.el</artifactId>
+    	<version>3.0.0</version>
+	</dependency>
   </dependencies>
+  
   <build>
     <finalName>liquidity-ratio</finalName>
+    
+    <plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.1</version>
+			<configuration>
+				<source>1.7</source>
+				<target>1.7</target>
+			</configuration>
+		</plugin>
+    
+		<plugin>
+			<groupId>org.apache.tomcat.maven</groupId>
+			<artifactId>tomcat7-maven-plugin</artifactId>
+			<version>2.2</version>
+			<configuration>
+				<server>TomcatServer</server>
+				<port>8080</port>
+				<path>/</path>
+				<systemProperties>
+					<spring.profiles.active>development</spring.profiles.active>
+				</systemProperties>
+			</configuration>
+		</plugin>
+	</plugins>
   </build>
+  
+  <repositories>
+  	<repository>
+  		<id>com.springsource.repository.bundles.release</id>
+  		<name>EBR Spring Release Repository</name>
+  		<url>http://repository.springsource.com/maven/bundles/release</url>
+  	</repository>
+  	<repository>
+  		<id>com.springsource.repository.bundles.external</id>
+  		<name>EBR External Release Repository</name>
+  		<url>http://repository.springsource.com/maven/bundles/external</url>
+  	</repository>
+  </repositories>
 </project>
