--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 	<context-param>
     	<param-name>contextConfigLocation</param-name>
     	<param-value>
-    		com.mfhsapp.kcvlending.config
+    		org.geeksexception.liquidityratio.config
     	</param-value>
 	</context-param>
 	
@@ -39,20 +39,7 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
-	<servlet>
-		<description>Apache CXF Endpoint</description>
-		<display-name>KCV Lending</display-name>
-		<servlet-name>webService</servlet-name>
-		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
-		<load-on-startup>2</load-on-startup>
-	</servlet>
-	
-	<servlet-mapping>
-		<servlet-name>webService</servlet-name>
-		<url-pattern>/api/*</url-pattern>
-	</servlet-mapping>
-	
+		
 	<session-config>
 		<session-timeout>60</session-timeout>
 	</session-config>
