Finished the jasper report template for LCR

--- a/src/main/resources/reports.properties
+++ b/src/main/resources/reports.properties
@@ -1,2 +1,2 @@
-simpleReport.(class)=org.springframework.web.servlet.view.jasperreports.JasperReportsPdfView
-simpleReport.url=/WEB-INF/reports/BarbecueReport.jrxml
+liquidityCoverageRatioReport.(class)=org.springframework.web.servlet.view.jasperreports.JasperReportsXlsView
+liquidityCoverageRatioReport.url=/WEB-INF/reports/liquidity-coverage-ratio.jrxml
