--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,21 @@
     	<artifactId>jasperreports</artifactId>
     	<version>6.1.0</version>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.poi</groupId>
+    	<artifactId>poi</artifactId>
+    	<version>3.10.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.poi</groupId>
+    	<artifactId>poi-ooxml</artifactId>
+    	<version>3.10.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.poi</groupId>
+    	<artifactId>poi-ooxml-schemas</artifactId>
+    	<version>3.10.1</version>
+    </dependency>
     
     <dependency>
     	<groupId>org.slf4j</groupId>
