Big time update

--- a/src/main/resources/reports.properties
+++ b/src/main/resources/reports.properties
@@ -1,2 +1,3 @@
-liquidityCoverageRatioReport.(class)=org.springframework.web.servlet.view.jasperreports.JasperReportsXlsView
+liquidityCoverageRatioReport.(class)=org.springframework.web.servlet.view.jasperreports.JasperReportsMultiFormatView
 liquidityCoverageRatioReport.url=/WEB-INF/reports/liquidity-coverage-ratio.jrxml
+liquidityCoverageRatioReport.reportDataKey=liquidityCoverageRatio
