--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,24 @@
     	<artifactId>javax.el</artifactId>
     	<version>3.0.0</version>
 	</dependency>
+	
+	<dependency>
+    	<groupId>joda-time</groupId>
+    	<artifactId>joda-time</artifactId>
+    	<version>2.8.1</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>javax.inject</groupId>
+    	<artifactId>javax.inject</artifactId>
+    	<version>1</version>
+    </dependency>
+    
+    <dependency>
+    	<groupId>commons-io</groupId>
+    	<artifactId>commons-io</artifactId>
+    	<version>2.4</version>
+    </dependency>
   </dependencies>
   
   <build>
